groupId fix